@@ -2318,11 +2318,13 @@ $wgExperimentalHtmlIds = true;
  * $wgFooterIcons itself is a key/value array.
  * The key is the name of a block that the icons will be wrapped in. The final id varies 
  * by skin; Monobook and Vector will turn poweredby into f-poweredbyico while Modern 
- * turns it into mw_poweredby.  The value is a key/value array of icons. The key may or 
- * may not be used by the skin but it can be used to find the icon and unset it or 
- * change the icon if needed. This is useful for disabling icons that are set by extensions.
+ * turns it into mw_poweredby.
+ * The value is either key/value array of icons or a string.
+ * In the key/value array the key may or may not be used by the skin but it can
+ * be used to find the icon and unset it or change the icon if needed.
+ * This is useful for disabling icons that are set by extensions.
  * The value should be either a string or an array. If it is a string it will be output 
- * directly, however some skins may choose to ignore it. An array is the preferred format 
+ * directly as html, however some skins may choose to ignore it. An array is the preferred format 
  * for the icon, the following keys are used:
  *   src: An absolute url to the image to use for the icon, this is recommended
  *        but not required, however some skins will ignore icons without an image
@@ -4334,7 +4336,10 @@ $wgRightsIcon = null;
  */
 $wgLicenseTerms = false;
 
-/** Set this to some HTML to override the rights icon with an arbitrary logo */
+/**
+ * Set this to some HTML to override the rights icon with an arbitrary logo
+ * @deprecated Use $wgFooterIcons['copyright']['copyright']
+ */
 $wgCopyrightIcon = null;
 
 /** Set this to true if you want detailed copyright information forms on Upload. */
